Settings base makes more sense than storage

--- a/TODO
+++ b/TODO
@@ -3,9 +3,6 @@ Run onload (static?) checks
 
 Why is 'common' showing in management commands?
 
-? Namespace as site name
-This is an issue, as Django allows multiple ''sites'. Niether does 
-Settings have a useful suggestion. I thought DB.NAMe may do it, but for
-SQLLite thats a path. For now, it's 'site'
+Need middleware to choose between static/dynamic files
 
-Extend view to use slugs, like url and generator can
+Dithering between provide extensions, and not.
